회원가입 입력 처리중

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -123,10 +123,11 @@
                     <button type="submit" class="btn btn-lg btn-primary">회원 가입 완료</button>
                     <button type="reset" class="btn btn-lg btn-secondary">초기화</button>
                 </div>
-
+            </div>
 
         </form>
     </div>
+
 </main>
 
 
