--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -60,6 +60,10 @@
     <div class="bg-light mt-5 p-5 rounded">
         <h1>회원가입</h1>
 
+        <div>
+            <p th:text="${errorMessage}"></p>
+        </div>
+
         <form method="post" action="/user/register">
 
             <div class="input-group input-group-lg-1">
@@ -71,12 +75,12 @@
 
             <div class="input-group mt-5 input-group-lg-2">
                 <span class="input-group-text" id="inputGroup-sizing-lg-2">비밀번호</span>
-                <input type="text" name="password" required class="form-control" aria-label="Sizing example input"
+                <input type="password" name="password" required class="form-control" aria-label="Sizing example input"
                        aria-describedby="inputGroup-sizing-lg">
             </div>
             <div class="input-group mt-1 input-group-lg-21">
                 <span class="input-group-text" id="inputGroup-sizing-lg-21">비밀번호 확인</span>
-                <input type="text" name="Repassword" required class="form-control" aria-label="Sizing example input"
+                <input type="password" name="Repassword" required class="form-control" aria-label="Sizing example input"
                        aria-describedby="inputGroup-sizing-lg">
             </div>
 
@@ -111,11 +115,11 @@
 
             <div class="mt-5">
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="gender" id="inlineRadio1" value="option1">
+                    <input class="form-check-input" type="radio" name="gender" id="inlineRadio1" value="F">
                     <label class="form-check-label" for="inlineRadio1">여성</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="gender" id="inlineRadio2" value="option2">
+                    <input class="form-check-input" type="radio" name="gender" id="inlineRadio2" value="M">
                     <label class="form-check-label" for="inlineRadio2">남성</label>
                 </div>
 
