--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -130,7 +130,7 @@
                 </div>
 
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-5">
-                    <button type="button" class="btn btn-lg btn-primary">회원 가입 완료</button>
+                    <button type="submit" class="btn btn-lg btn-primary">회원 가입 완료</button>
                     <button type="reset" class="btn btn-lg btn-secondary">초기화</button>
                 </div>
             </div>
